--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@capacitor/android": "^7.0.1",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@ionic/pwa-elements": "^3.3.0",
+    "android": "^0.0.8",
     "ngx-webstorage": "^19.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
